[gd_scene load_steps=2 format=3 uid="uid://dre0ltfavlxir"]

[ext_resource type="Script" uid="uid://bs0jpngdkcg4q" path="res://Scripts/Menu Scripts/OptionsMenu.gd" id="1_6fwcd"]

[node name="Options Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fwcd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Back Button" type="Button" parent="CanvasLayer"]
offset_left = 49.0
offset_top = 38.0
offset_right = 135.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 20
text = "< Back"

[node name="Control Changer" type="OptionButton" parent="CanvasLayer"]
offset_left = 395.0
offset_top = 129.0
offset_right = 570.0
offset_bottom = 167.0
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "Mouse"
popup/item_0/id = 0
popup/item_1/text = "Controller"
popup/item_1/id = 1

[node name="Text" type="Label" parent="CanvasLayer/Control Changer"]
layout_mode = 0
offset_left = -199.0
offset_top = 1.0
offset_right = -27.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 25
text = "Input Method:"

[node name="Volume Slider" type="HSlider" parent="CanvasLayer"]
offset_left = 409.0
offset_top = 219.0
offset_right = 675.0
offset_bottom = 246.0
value = 100.0

[node name="Text" type="Label" parent="CanvasLayer/Volume Slider"]
layout_mode = 0
offset_left = -137.0
offset_top = -10.0
offset_right = -38.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 25
text = "Volume:"

[connection signal="pressed" from="CanvasLayer/Back Button" to="." method="BackButtonPressed"]
[connection signal="item_selected" from="CanvasLayer/Control Changer" to="." method="InputMethodChanged"]
[connection signal="value_changed" from="CanvasLayer/Volume Slider" to="." method="SliderMoved"]
